# Abacus

./: .gitignore  README.md  manage.py  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  python-ci.yml
Abacus/pages/: apps.py  urls.py  views.py
Abacus/pages/templates/pages/: licence.html
Abacus/static/css/: icons.css  icons.css.map  style.css
Abacus/templates/: 404.html  500.html  base.html  footer.html  navbar.html
Abacus/tournaments/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
Abacus/tournaments/migrations/: 0001_initial.py  0002_alter_tournament_name_alter_tournament_slug.py
Abacus/tournaments/templates/tournaments/: tournament_create.html  tournament_detail.html  tournament_list.html  tournament_update.html
abacus/static/css/: style.css.map
abacus/templates/: 404.html  base.html
config/: urls.py  wsgi.py
config/settings/: base.py  local.py
scripts/: README.md  format.sh  lint.sh  serve.sh  update.sh
